[tool.poetry]
name = "ep"
version = "0.1.0"
description = ""
authors = ["osangu <osangu012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanie = "^1.18.0"
sqlalchemy = "^2.0.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
pymysql = "^1.0.3"
cryptography = "^40.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
